<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".DetailsRequests">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logRestaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:background="@color/light_gray"
            android:src="@drawable/local_dinner"
            app:layout_constraintBottom_toBottomOf="@id/txtNameRestaurant"
            app:layout_constraintEnd_toStartOf="@+id/txtNameRestaurant"
            app:layout_constraintTop_toTopOf="@+id/txtNameRestaurant" />

        <TextView
            android:id="@+id/txtNameRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/txtTitleDetails"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextDetailsLayout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDetailsLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/ExDetailsEditText"
            android:inputType="textMultiLine"
            android:lines="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btConfirmObs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDetailsLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:text="@string/ConfirmObs"
        android:textSize="18sp"
        app:backgroundTint="@color/red" />

</RelativeLayout>