<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logRestaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:background="@color/light_gray"
            android:src="@drawable/local_dinner"
            app:layout_constraintBottom_toBottomOf="@id/txtNameRestaurant"
            app:layout_constraintEnd_toStartOf="@+id/txtNameRestaurant"
            app:layout_constraintTop_toTopOf="@+id/txtNameRestaurant" />

        <TextView
            android:id="@+id/txtNameRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/red"

            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/logRestaurant"
        android:layout_margin="8dp"
        android:background="@drawable/bg_white_rounded"
        android:submitBackground="@drawable/bg_white_rounded"
        app:queryHint="Search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchView"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btFirstCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_button_disable"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="8dp"
                    android:text="@string/FirstCourse"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btMainDishes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_button_disable"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="8dp"
                    android:text="@string/MainDishe"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btDessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_button_disable"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="8dp"
                    android:text="@string/Dessert"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btDrink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_button_disable"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="8dp"
                    android:text="@string/Drink"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/sectionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="All"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFoods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/btFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btDetailsRequest"
        android:layout_alignBottom="@+id/btDetailsRequest"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/txtButtonFinish"
        android:textSize="18sp"
        app:backgroundTint="@color/red" />


    <ImageButton
        android:id="@+id/btDetailsRequest"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_button_enabled"
        android:src="@drawable/chat" />


</RelativeLayout>